typescript/checker/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractCrashedOnce.ts.stderr
error: Expected ident
 --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractCrashedOnce.ts:8:5
  |
8 |     }
  |     ^

